--- a/package.json
+++ b/package.json
@@ -18,12 +18,25 @@
   },
   "homepage": "https://github.com/velasja/civic-me#readme",
   "dependencies": {
+    "axios": "^0.16.1",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "flexboxgrid": "^6.3.1",
+    "material-ui": "^0.17.4",
+    "moment": "^2.18.1",
     "mongoose": "^4.9.5",
     "morgan": "^1.8.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-router": "^4.1.1"
+    "react-router": "^4.1.1",
+    "react-tap-event-plugin": "^2.0.1",
+    "webpack": "^2.4.1"
   }
 }
