--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
     "webpack": "^2.4.1"
   }
